artifacts/ingress/production/client-apps-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-apps-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: client-apps-ingress
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - preproduction.resourcewatch.org
    - south-africa-platform.vizzuality.com
    - indonesia-platform-staging.vizzuality.com
    - indonesia.climatewatchdata.org
    - india-platform-staging.vizzuality.com
    - india.climatewatchdata.org
    - indiaclimateexplorer.org
    secretName: ct-prod-tls-client-apps-ingress
  rules:
  - host: preproduction.resourcewatch.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: south-africa-platform.vizzuality.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: indonesia-platform-staging.vizzuality.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: indonesia.climatewatchdata.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: india-platform-staging.vizzuality.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: india.climatewatchdata.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  - host: indiaclimateexplorer.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
